--- a/src/main/resources/com/example/dealership/ShoppingCart.fxml
+++ b/src/main/resources/com/example/dealership/ShoppingCart.fxml
@@ -43,12 +43,15 @@
          </image>
       </ImageView>
       <Button fx:id="continueShopping" layoutX="244.0" layoutY="549.0" mnemonicParsing="false" onAction="#continueShopping" text="Continue shopping" />
-      <Label fx:id="thingAdded" alignment="TOP_LEFT" layoutX="7.0" layoutY="171.0" prefHeight="121.0" prefWidth="599.0" textAlignment="JUSTIFY">
+      <Label fx:id="thingAdded" alignment="TOP_LEFT" layoutX="7.0" layoutY="171.0" prefHeight="210.0" prefWidth="599.0" textAlignment="JUSTIFY">
 
          <font>
-            <Font size="19.0" />
+            <Font size="20.0" />
          </font>
       </Label>
+      <Line endX="100.0" layoutX="506.0" layoutY="320.0" startX="-506.0" startY="-1.52587890625E-5" />
+      <Line endX="100.0" layoutX="506.0" layoutY="350.0" startX="-506.0" startY="-1.52587890625E-5" />
+      <Line endX="100.0" layoutX="506.0" layoutY="380.0" startX="-506.0" startY="-1.52587890625E-5" />
    </children>
 
 
