--- a/src/main/resources/com/example/dealership/LogIn.fxml
+++ b/src/main/resources/com/example/dealership/LogIn.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -10,59 +9,57 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="CENTER" prefHeight="571.0" prefWidth="900.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.dealership.Controller">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
-   <AnchorPane prefHeight="608.0" prefWidth="860.0" style="-fx-background-color: #98c1d9;">
-      <children>
-         <TabPane layoutX="436.0" layoutY="97.0" prefHeight="472.0" prefWidth="422.0" style="-fx-background-color: #98DFF1;" tabClosingPolicy="UNAVAILABLE">
-           <tabs>
-             <Tab style="-fx-background-color: #3d5a80;" text="Sing In">
-               <content>
-                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="422.0" prefWidth="422.0" style="-fx-background-color: #e0fbfc;">
-                        <children>
-                           <TextField fx:id="UserInputLogIn" layoutX="14.0" layoutY="100.0" opacity="0.3" prefHeight="33.0" prefWidth="200.0" />
-                           <Text layoutX="14.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User" wrappingWidth="27.09635353088379" />
-                           <Text layoutX="14.0" layoutY="182.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
-                            <Button layoutX="147.0" layoutY="404.0" onAction="#onEnterLogIn" prefHeight="25.0" prefWidth="129.0" style="-fx-background-color: #293241;" text="Enter" textAlignment="CENTER" textFill="WHITE" />
-                           <PasswordField fx:id="PasswordInputLogIn" layoutX="13.0" layoutY="197.0" opacity="0.3" prefHeight="32.0" prefWidth="203.0" />
-                           <Line endX="100.0" layoutX="114.0" layoutY="229.0" startX="-100.0" />
-                           <Line endX="100.0" layoutX="114.0" layoutY="133.0" startX="-100.0" />
-                        </children>
-                     </AnchorPane>
-               </content>
-             </Tab>
-             <Tab style="-fx-background-color: #3d5a80;" text="Register">
-               <content>
-                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="523.0" prefWidth="370.0" style="-fx-background-color: #e0fbfc;">
-                        <children>
-                           <TextField fx:id="UserRegister" layoutX="14.0" layoutY="98.0" prefHeight="33.0" prefWidth="200.0" />
-                           <TextField fx:id="PasswordRegister" layoutX="14.0" layoutY="204.0" prefHeight="33.0" prefWidth="200.0" />
-                           <Text layoutX="14.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User" />
-                           <Text layoutX="14.0" layoutY="177.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
-                           <Button layoutX="149.0" layoutY="404.0" mnemonicParsing="false" onAction="#onEnterRegister" prefHeight="25.0" prefWidth="125.0" style="-fx-background-color: #293241;" text="Register" textAlignment="CENTER" textFill="WHITE" />
-                        </children>
-                     </AnchorPane>
-               </content>
-             </Tab>
-           </tabs>
-         </TabPane>
-         <AnchorPane layoutX="-28.0" layoutY="-29.0" prefHeight="723.0" prefWidth="464.0" style="-fx-background-color: #3d5a80;">
-            <children>
-               <ImageView fitHeight="212.0" fitWidth="311.0" layoutX="77.0" layoutY="258.0" pickOnBounds="true" preserveRatio="true">
-                  <image>
-                     <Image url="@../../../images/logomoto.png" />
-                  </image>
-               </ImageView>
-            </children>
-         </AnchorPane>
-      </children>
-   </AnchorPane>
 
-    <Label fx:id="welcomeText" />
-</VBox>
+<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.dealership.Controller">
+   <children>
+      <AnchorPane prefHeight="602.0" prefWidth="900.0" style="-fx-background-color: #98c1d9;">
+         <children>
+            <TabPane layoutX="436.0" layoutY="65.0" prefHeight="472.0" prefWidth="464.0" style="-fx-background-color: #98DFF1;" tabClosingPolicy="UNAVAILABLE">
+              <tabs>
+                <Tab style="-fx-background-color: #3d5a80;" text="Sing In">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="422.0" prefWidth="422.0" style="-fx-background-color: #e0fbfc;">
+                           <children>
+                              <TextField fx:id="UserInputLogIn" layoutX="14.0" layoutY="100.0" opacity="0.3" prefHeight="33.0" prefWidth="200.0" />
+                              <Text layoutX="14.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User" wrappingWidth="27.09635353088379" />
+                              <Text layoutX="14.0" layoutY="182.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
+                               <Button layoutX="147.0" layoutY="404.0" onAction="#onEnterLogIn" prefHeight="25.0" prefWidth="129.0" style="-fx-background-color: #293241;" text="Enter" textAlignment="CENTER" textFill="WHITE" />
+                              <PasswordField fx:id="PasswordInputLogIn" layoutX="13.0" layoutY="197.0" opacity="0.3" prefHeight="32.0" prefWidth="203.0" />
+                              <Line endX="100.0" layoutX="114.0" layoutY="229.0" startX="-100.0" />
+                              <Line endX="100.0" layoutX="114.0" layoutY="133.0" startX="-100.0" />
+                           </children>
+                        </AnchorPane>
+                  </content>
+                </Tab>
+                <Tab style="-fx-background-color: #3d5a80;" text="Register">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="523.0" prefWidth="370.0" style="-fx-background-color: #e0fbfc;">
+                           <children>
+                              <TextField fx:id="UserRegister" layoutX="14.0" layoutY="98.0" prefHeight="33.0" prefWidth="200.0" />
+                              <TextField fx:id="PasswordRegister" layoutX="14.0" layoutY="204.0" prefHeight="33.0" prefWidth="200.0" />
+                              <Text layoutX="14.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User" />
+                              <Text layoutX="14.0" layoutY="177.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
+                              <Button layoutX="149.0" layoutY="404.0" mnemonicParsing="false" onAction="#onEnterRegister" prefHeight="25.0" prefWidth="125.0" style="-fx-background-color: #293241;" text="Register" textAlignment="CENTER" textFill="WHITE" />
+                           </children>
+                        </AnchorPane>
+                  </content>
+                </Tab>
+              </tabs>
+            </TabPane>
+            <AnchorPane layoutX="-28.0" layoutY="-4.0" prefHeight="606.0" prefWidth="464.0" style="-fx-background-color: #3d5a80;">
+               <children>
+                  <ImageView fitHeight="212.0" fitWidth="311.0" layoutX="77.0" layoutY="196.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../images/logomoto.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+            <Label fx:id="welcomeText" layoutX="513.0" layoutY="558.0" />
+         </children>
+      </AnchorPane>
+   </children>
+</AnchorPane>
